# ProgrammingAdvices

./: README.md
04 - Algorithms & Problem-Solving Level 1/: Problem #02.cpp  Problem #04.cpp  Problem #06.cpp  Problem #07.cpp  Problem #08.cpp  Problem #09.cpp  Problem #10.cpp  Problem #13.cpp  Problem #16.cpp  Problem #21.cpp  Problem #26.cpp  Problem #28.cpp  Problem #32.cpp  Problem #35.cpp  Problem #37.cpp  Problem #43.cpp  Problem #44.cpp  Problem #45.cpp  Problem #47.cpp  Problem #48.cpp  Problem #50.cpp
04 - Algorithms & Problem-Solving Level 1/Solutions/: Problem #01.cpp  Problem #03.cpp  Problem #05.cpp  Problem #11.cpp  Problem #12.cpp  Problem #14.cpp  Problem #15.cpp  Problem #17.cpp  Problem #18.cpp  Problem #19.cpp  Problem #20.cpp  Problem #22.cpp  Problem #23.cpp  Problem #24.cpp  Problem #25.cpp  Problem #27.cpp  Problem #29.cpp  Problem #30.cpp  Problem #31.cpp  Problem #33.cpp  Problem #34.cpp  Problem #36.cpp  Problem #38.cpp  Problem #39.cpp  Problem #40.cpp  Problem #41.cpp  Problem #42.cpp  Problem #46.cpp  Problem #49.cpp
05 - Algorithms & Problem-Solving Level 2/Problems/Solutions/: Problem #01.cpp  Problem #02.cpp  Problem #03.cpp  Problem #04.cpp  (+44 more)
05 - Algorithms & Problem-Solving Level 2/Projects/: Math_Game.cpp  Stone_Paper_Scissor.cpp
07 - Algorithms & Problem Solving Level 3/Projects/: Project 1 - Bank.cpp  Project 2 - Bank Extension.cpp
08 - Algorithms & Problem Solving Level 4/Projects/: Project 1 Bank Extension 2.cpp  Project 2 - ATM System.cpp
11 - OOP as it Should Be (Applications)/: CMakeLists.txt
11 - OOP as it Should Be (Applications)/Data/: Clients.txt  Log.txt  TransferLog.txt  Users.txt
11 - OOP as it Should Be (Applications)/Include/: CurrencyExchangeScreen.h  Global.h  claDate.h  clsAddClintScreen.h  clsAddUserScreen.h  clsClint.h  clsClintMainScreen.h  clsCurrency.h  clsCurrencyCalculatorScreen.h  clsDate.h  clsDeleteClintScreen.h  clsDeleteUserScreen.h  clsDepositScreen.h  clsFindCurrencyScreen.h  clsInput.h  clsListClintScreen.h  clsListCurrenciesScreen.h  clsListUserScreen.h  clsLogScreen.h  clsLoginScreen.h  clsManageUsersScreen.h  clsPerson.h  clsScreen.h  clsString.h  clsTransactionMenuScreen.h  clsTransferLogScreen.h  clsTransferScreen.h  clsUpdateClintScreen.h  clsUpdateCurrencyRateScreen.h  clsUpdateUserScreen.h  clsUser.h  clsWithdrawScreen.h
11 - OOP as it Should Be (Applications)/Source/: Global.cpp  clsAddClintScreen.cpp  clsAddUserScreen.cpp  clsClint.cpp  clsClintMainScreen.cpp  clsCurrency.cpp  clsCurrencyCalculatorScreen.cpp  clsCurrencyExchangeScreen.cpp  clsDate.cpp  clsDeleteClintScreen.cpp  clsDeleteUserScreen.cpp  clsDepositScreen.cpp  clsFindCurrencyScreen.cpp  clsInput.cpp  clsListClintScreen.cpp  clsListCurrenciesScreen.cpp  clsListUserScreen.cpp  clsLogScreen.cpp  clsLoginScreen.cpp  clsManageUsersScreen.cpp  clsPerson.cpp  clsScreen.cpp  clsString.cpp  clsTransactionMenuScreen.cpp  clsTransferLogScreen.cpp  clsTransferScreen.cpp  clsUpdateClintScreen.cpp  clsUpdateCurrencyRateScreen.cpp  clsUpdateUserScreen.cpp  clsUser.cpp  clsWithdrawScreen.cpp  main.cpp
(+80 files in other folders)
